# cfgpath

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  cfgpath.h  clang_tidy.sh  format.sh  test-linux.c  test-macos.c  test-win-unicode.c  test-win.c
cmake/: string_utils.cmake
include/cfgpath/: cfgpath.core.h  cfgpath.h  cfgpath.incl.h
include/cfgpath/detail/: cfgpath.impl.linux.h  cfgpath.impl.osx.h  cfgpath.impl.win32.h
include/cfgpath/detail/polyfills/: path_length.polyfills.h  shlobj.polyfills.h
src/: cfgpath.core.c  cfgpath.cpp
tests/: CMakeLists.txt  test-linux.c  test-osx.c  test-win.c
